# BlackHole-Simulation

./: 2D_BlackHole.cpp  3D_BlackHole.cpp  BlackHole2D - LinkedIn.md  BlackHole2D - README.md  BlackHole2D - Requirements.md  BlackHole3D - README.md  BlackHole3D - Requirements.md  CMakeLists.txt  README.md  Test.cpp
